2009-11-10  Sancho Lerena <slerena@gmail.com>

	* pandora_console.spec: Fixed small problem with .spec

	* DEBIAN/control: Edited package description.

	* DEBIAN/make_deb_package.sh: Several changes, deletion and copy
	of files and .svn are not made with cp and xargs | rm: Faster.
	
2009-11-07  Sancho Lerena <slerena@gmail.com>

	* include/config_process.php: COme back to non-persistent pconnect 
	who seems to raise some "MySQL has gone away" in PHP 5.3.x

	* extensions/update_manager/sql/update_manager.sql: Updated update
	manager URL to point 3.0 version.

2009-11-07  Raul Mateos  <raulofpandora@gmail.com>

	* operation/servers/view_server_detail.php: Change title to show the
	father section and some added texts.

	* include/help/en/help_*.php: Several language fixes.

2009-11-06  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/tactical.php, general/logon_ok.php: Use the same
	order for summary, use the same colors (some from tango palette) in both
	files.

	* images/status_sets/default/server_ok.png: Use the same colour as the
	other OK status images (from tango palette).

	* DEBIAN/make_deb_package.sh: Improved english texts.

2009-11-06 Miguel de Dios <miguel.dedios@artica.es>

	* operation/snmpconsole/snmp_view.php: fix and optimize the query to traps
	in DB, because the old style didn't run with paginator and it was slow with
	much traps registers.
	* operation/agentes/status_monitor.php,
	godmode/alerts/configure_alert_compound.php: little fix arround the code
	style.

2009-11-04 Miguel de Dios <miguel.dedios@artica.es>

	* DEBIAN/control: fix dependencies, not necesary mysql-server, because the
	mysql can install in another machine.

2009-11-04  Ramon Novoa  <rnovoa@artica.es>

	* godmode/snmpconsole/snmp_alert.php: An agent, OID and custom OID may
	  be specified at the same time.

2009-11-04  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/alerts_status.php: different colour for table header.
